# jsconf-2025-benchmarks

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
ast/: config.json  rules.bnf  run.mts
ast-wasm/: Makefile  README.md  run.mts  test.mts  wasm_output.json
ast-wasm/c/: ast.mts  wasm_ast.c  wasm_ast.js  wasm_ast.wasm
ast-wasm/example/: a.tst
ast-wasm/go/: ast.mts  go.mod  main.go  main.wasm
ast-wasm/rust/: Cargo.toml  ast.mts
ast-wasm/rust/src/: lib.rs
ast/c/: ast.c
ast/example/: b.tst  c.tst
ast/go/: ast.go  go.mod
ast/js/: ast.mts  tsconfig.json
ast/rust/: Cargo.toml
ast/rust/src/: main.rs
results/: Results.xlsx
sort/: Makefile  data.json
sort/c/: sort.c
sort/go/: go.mod  sort.go
sort/js/: sort.mjs
sort/rust/: Cargo.toml
sort/rust/src/: main.rs
