[package]
name = "ast-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# Enable `wee_alloc` feature to use `wee_alloc` as the global allocator.
[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.1"
optional = true
